[package]
name = "eden"
version = "0.2.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]

[dependencies]
jsonwebtoken = "^1.1.6"
serde = "^0.9.6"
serde_derive = "^0.9.6"
serde_json = "^0.9.6"
i2cdev = "*"
clap = "*"
bmp085 = "0.1.1"
hyper = "^0.10.4"
hyper-rustls = "^0.3.2"
medallion = "^1.1"
log4rs = { version = "*", features = ["serde_yaml"] }
log = "*"
chrono = "*"
toml = "^0.3.0"
mioco = "*"
threadpool = "1.0"
