[package]
name = "eden"
version = "0.4.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]

[dependencies]
jsonwebtoken = "^2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
i2cdev = "*"
clap = "*"
bmp085 = "0.1.1"
hyper = "^0.10.4"
hyper-rustls = "^0.3.2"
log4rs = { version = "*", features = ["serde_yaml"] }
log = "*"
chrono = "*"
toml = "^0.4.0"
mioco = "*"
scoped-pool = "1"
