[package]
name = "eden"
version = "0.4.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"

[dependencies]
jsonwebtoken = "6.0.1"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
i2cdev = "0.4.2"
clap = "2.33.0"
bmp085 = { git = "https://github.com/celaus/rust-bmp085" }
log4rs = { version = "*", features = ["serde_yaml"] }
log = "*"
chrono = "0.4.6"
toml = "^0.5.1"
tokio = "^0.1.21"
scoped-pool = "1"
reqwest = "0.9.18"
